<!--
  ~     Copyright (C) rascarlo  rascarlo@gmail.com
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">AURdroid</string>
    <string name="unicode_dir">\u002F</string>
    <string name="unicode_comma_whitespace">,\u0020</string>
    <string name="settings">Settings</string>
    <string name="not_available">Not available</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="retrofit_something_went_wrong">Something went wrong. Please be sure to have an active internet connection and try again.</string>

    <string name="keywords">Keywords</string>
    <string name="keywords_hint">The API rate is limited to a maximum of 4000 requests per day per IP.</string>
    <string name="package_search">Package search</string>
    <string name="search">Search</string>
    <string name="name_or_description">Name or description</string>
    <string name="name">Name</string>
    <string name="dependencies">Dependencies</string>
    <string name="depends">Depends</string>
    <string name="make_depends">Make depends</string>
    <string name="opt_depends">Opt depends</string>
    <string name="check_depends">Check depends</string>
    <string name="sort">Sort</string>
    <string name="package_name">Package name</string>
    <string name="last_updated">Last updated</string>
    <string name="votes">Votes</string>
    <string name="popularity">Popularity</string>
    <string name="first_submitted">First submitted</string>

    <string name="formatted_version">Version: %s</string>
    <string name="formatted_packagebase">Package base: %s</string>
    <string name="formatted_last_updated">Last updated: %s</string>
    <string name="formatted_last_update">Last updated: %s</string>
    <string name="formatted_first_submitted">First submitted: %s</string>
    <string name="formatted_out_of_date">Flagged-out-of-date: %s</string>
    <string name="formatted_votes">Votes: %d</string>
    <string name="formatted_popularity">Popularity: %f</string>
    <string name="formatted_maintainer">Maintainer: %s</string>
    <string name="formatted_upstream_url">Upstream URL: %1$s</string>
    <string name="formatted_license">License: %1$s</string>
    <string name="formatted_dependencies">Dependencies (%1$d)</string>
    <string name="formatted_opt_dependencies">Optional dependencies (%1$d)</string>
    <string name="formatted_make_dependencies">Make dependencies (%1$d)</string>
    <string name="formatted_conflicts">Conflicts (%1$d)</string>
    <string name="formatted_provides">Provides (%1$d)</string>

    <string name="view_pkgbuild">View PKGBUILD</string>
    <string name="view_changes">View changes</string>
    <string name="maintainer">Maintainer</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="share">Share</string>

    <string name="design">Design</string>
    <string name="theme">Theme</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <string name="theme_light">Light</string>

    <string name="i_use_arch_btw">I use Arch BTW</string>
    <string name="links">Links</string>
    <string name="source_link" translatable="false">https://github.com/rascarlo/AURdroid</string>
    <string name="source">Source</string>
    <string name="api_wiki_link" translatable="false">https://wiki.archlinux.org/index.php/Aurweb_RPC_interface</string>
    <string name="api_wiki">API wiki</string>
    <string name="arch_linux_link" translatable="false">https://www.archlinux.org/</string>
    <string name="arch_linux">Arch Linux</string>
    <string name="aur_link" translatable="false">https://aur.archlinux.org/</string>
    <string name="aur">AUR</string>

    <!--theme keys-->
    <string name="key_theme" translatable="false">key_theme</string>
    <string name="key_theme_default_value" translatable="false">@string/key_theme_dark</string>
    <string name="key_theme_dark" translatable="false">key_theme_dark</string>
    <string name="key_theme_black">key_theme_black</string>
    <string name="key_theme_light" translatable="false">key_theme_light</string>

    <!--search by keys-->
    <string name="key_search_by" translatable="false">key_search_by</string>
    <string name="key_search_by_default_value" translatable="false">key_search_by_name_or_description</string>
    <string name="key_search_by_name_or_description" translatable="false">key_search_by_name_or_description</string>
    <string name="key_search_by_name" translatable="false">key_search_by_name</string>
    <string name="key_search_by_maintainer" translatable="false">key_search_by_maintainer</string>
    <string name="key_search_by_depends" translatable="false">key_search_by_depends</string>
    <string name="key_search_by_make_depends" translatable="false">key_search_by_make_depends</string>
    <string name="key_search_by_opt_depends" translatable="false">key_search_by_opt_depends</string>
    <string name="key_search_by_check_depends" translatable="false">key_search_by_check_depends</string>

    <!--sort keys-->
    <string name="key_sort" translatable="false">key_sort</string>
    <string name="key_sort_default_value" translatable="false">key_sort_by_package_name</string>
    <string name="key_sort_by_package_name" translatable="false">key_sort_by_package_name</string>
    <string name="key_sort_by_votes" translatable="false">key_sort_by_votes</string>
    <string name="key_sort_by_popularity" translatable="false">key_sort_by_popularity</string>
    <string name="key_sort_by_last_updated" translatable="false">key_sort_by_last_updated</string>
    <string name="key_sort_by_first_submitted" translatable="false">key_sort_by_first_submitted</string>

</resources>
