<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) rascarlo  rascarlo@gmail.com
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_info_result_view_pkgbuild"
        android:title="@string/view_pkgbuild" />
    <item
        android:id="@+id/menu_info_result_view_changes"
        android:title="@string/view_changes" />
    <item
        android:id="@+id/menu_info_result_maintainer"
        android:title="@string/maintainer" />
    <item
        android:id="@+id/menu_info_result_open_in_browser"
        android:title="@string/open_in_browser" />
    <item
        android:id="@+id/menu_info_result_share"
        android:title="@string/share" />
</menu>