<!--
  ~     Copyright (C) rascarlo  rascarlo@gmail.com
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_by_label_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <RadioGroup
            android:id="@+id/search_by_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/search_by_radio_button_name_or_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_or_description" />

            <RadioButton
                android:id="@+id/search_by_radio_button_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <RadioButton
                android:id="@+id/search_by_radio_button_maintainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maintainer" />

            <RadioButton
                android:id="@+id/search_by_radio_button_depends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/depends" />

            <RadioButton
                android:id="@+id/search_by_radio_button_make_depends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_depends" />

            <RadioButton
                android:id="@+id/search_by_radio_button_opt_depends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opt_depends" />

            <RadioButton
                android:id="@+id/search_by_radio_button_check_depends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_depends" />

        </RadioGroup>

    </LinearLayout>

</layout>