<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/field_label_text_view"
            style="@style/TextAppearanceHeadline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/field_chip_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_label_text_view"
            app:singleLine="false"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/field_chip_name_or_description"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_or_description" />

            <com.google.android.material.chip.Chip
                android:id="@+id/field_chip_name"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <com.google.android.material.chip.Chip
                android:id="@+id/field_chip_maintainer"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maintainer" />

            <com.google.android.material.chip.Chip
                android:id="@+id/field_chip_depends"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depends" />

            <com.google.android.material.chip.Chip
                android:id="@+id/field_chip_make_depends"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_depends" />

            <com.google.android.material.chip.Chip
                android:id="@+id/field_chip_opt_depends"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_depends" />

            <com.google.android.material.chip.Chip
                android:id="@+id/field_chip_check_depends"
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_depends" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>