<!--
  ~     Copyright (C) rascarlo  rascarlo@gmail.com
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_sort_label_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <RadioGroup
            android:id="@+id/search_sort_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/search_radio_button_package_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/package_name" />

            <RadioButton
                android:id="@+id/search_radio_button_votes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/votes" />

            <RadioButton
                android:id="@+id/search_radio_button_popularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popularity" />

            <RadioButton
                android:id="@+id/search_radio_button_last_updated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_updated" />

            <RadioButton
                android:id="@+id/search_radio_button_first_submitted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_submitted" />

        </RadioGroup>

    </LinearLayout>

</layout>