<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="infoResult"
            type="com.rascarlo.aurdroid.network.InfoResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_result_text_view_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:bindVersion="@{infoResult.version}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/formatted_version" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_result_text_view_packagebase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:bindPackageBase="@{infoResult.packageBase}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_result_text_view_version"
            tools:text="@string/formatted_packagebase" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_result_text_view_last_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:bindLastUpdate="@{infoResult.lastModified}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_result_text_view_packagebase"
            tools:text="@string/formatted_last_updated" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_result_text_view_first_submitted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:bindFirstSubmitted="@{infoResult.firstSubmitted}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_result_text_view_last_update"
            tools:text="@string/formatted_first_submitted" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_result_text_view_flag_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/text_alert_red"
            app:bindOutOfDate="@{infoResult.outOfDate}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_result_text_view_first_submitted"
            tools:text="@string/formatted_out_of_date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_result_text_view_votes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:bindVotes="@{infoResult.numVotes}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_result_text_view_flag_update"
            tools:text="@string/formatted_votes" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_result_text_view_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:bindPopularity="@{infoResult.popularity}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_result_text_view_votes"
            tools:text="@string/formatted_popularity" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/details_text_view_license"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:bindLicense="@{infoResult.license}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_result_text_view_popularity"
            tools:text="@string/formatted_license" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_result_text_view_maintainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:bindMaintainer="@{infoResult.maintainer}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_text_view_license"
            tools:text="@string/formatted_maintainer" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_result_text_view_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:autoLink="all"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:bindUpstreamUrl="@{infoResult.url}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_result_text_view_maintainer"
            tools:text="@string/formatted_upstream_url" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info_result_text_view_git_clone_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_spacing_small"
            android:autoLink="all"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:bindGitCloneUrl="@{infoResult.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_result_text_view_url"
            tools:text="@string/formatted_git_clone_url" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>